# quantum-emulator

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  doxygen.bib  web-build.bat  web-build.sh
src/app/: CMakeLists.txt  application.cc  application.h  circuit_info.cc  circuit_info.h  main.cc  theme.h
src/app/application/: application.cc  application.h  device_window.cc  device_window.h  editor_window_manager.cc  editor_window_manager.h
src/app/editor_windows/: circuit_editor_button.h  circuit_info_processor.cc  circuit_info_processor.h  custom_windows.cc  custom_windows.h  editor_window_manager.cc  editor_window_manager.h  editor_windows.cc  editor_windows.h
src/app/resources/: editorconfig_circuit.h  editorconfig_handler.h
src/app/resources/fonts/: FONTS.md
src/app/textures/: texture.cc  texture.h
src/app/util/: device_adapter_util.cc  device_adapter_util.h  settings_constants.h  sleep_util.h  wgpu_string_view_util.h
src/engine/: CMakeLists.txt  engine.cc  engine.h  types.h
src/engine/collections/: bimap.h  compile_time_map.h  sparse_set.h
src/engine/math/: bitwise_math.h  complex_matrix.cc  complex_matrix.h  constants.h  constexpr_math.h  matrix.h  simulator.h
src/engine/quantum_circuit/: circuit.cc  circuit.h  gate_matrices.h  gates.h
src/engine/simulator/: simulator.cc  simulator.h  state_vector.cc  state_vector.h
src/engine/util/: print_util.h  template_wizardry.h
test/: CMakeLists.txt  test_main.cc
